# asset_reg_editing

./: .gitignore  README.md  pyproject.toml
hexviewer/: main.py  read_asset_reg.py
hexviewer/asset_registry_ue5/: bytes.py  data_store_reader.py  name_mapper.py  name_pool.py  reader_type.py  registry_versions.py  tag_value_types.py  unreal_types.py  utils.py
hexviewer/asset_registry_ue5/binary_conversion/: read_binary_file.py  write_binary_file.py
hexviewer/asset_registry_ue5/json_conversion/: make_editable_json.py  name_reader.py  name_resolver.py  read_editable_json.py  tag_value_type_markers.py
hexviewer/asset_registry_ue5/readers/: binary_reader.py  binary_writer.py  fname_reader.py
hexviewer/asset_registry_ue5/types/: registry.py
