[tool.poetry]
name = "hexviewer"
version = "0.1.0"
description = ""
authors = ["Finn Wundram <finn.wundram@ewe.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cityhash = "^0.4.10"
click = "^8.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
asset_reg = 'hexviewer.main:cli'
